Implemented Character creation/editing.
Added base classes for Fragments, Activities, and ListFragments.
These base classes offer easy access to the application's logger and allow use to reduce code duplication.

--- a/app/src/main/res/layout/fragment_character_detail.xml
+++ b/app/src/main/res/layout/fragment_character_detail.xml
@@ -96,10 +96,12 @@
             android:text="@string/edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/delete_character_button"
             android:layout_alignTop="@id/delete_character_button"
             android:layout_alignParentRight="true"
-            android:layout_marginLeft="10dp"/>
+            android:layout_alignParentEnd="true"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:background="@drawable/button_background_roundedcorner"/>
     </RelativeLayout>
 
     <ScrollView
