--- a/app/src/main/res/layout/fragment_character_upsert.xml
+++ b/app/src/main/res/layout/fragment_character_upsert.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/upsert_character_name"
-        android:text="Race"/>
+        android:text="@string/race"/>
 
     <Spinner
         android:id="@+id/upsert_character_race"
@@ -59,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/upsert_character_race"
-        android:text="Class"/>
+        android:text="@string/class_label"/>
 
     <Spinner
         android:id="@+id/upsert_character_class"
@@ -72,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/characterDetailsPlaceholder"
-        android:minLines="1"
+        android:minLines="2"
         android:maxLines="8"
         android:singleLine="false"
         android:layout_below="@id/upsert_character_class"
