Implemented Event creation, editing, and deleting.
This isn't a complete implementation yet as it still needs input validation and the list setup for deletes and creations has been done yet.

Renamed the onCancelPressed method of the upsert fragments to make it cleared what cancel was pressed.

--- a/app/src/main/res/layout/event_onepane.xml
+++ b/app/src/main/res/layout/event_onepane.xml
@@ -26,10 +26,10 @@
 
     <Button
         android:id="@+id/death_button"
+        style="@style/primaryButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Died"
-        android:layout_alignParentBottom="true"/>
+        android:text="@string/died"
+        android:layout_alignParentBottom="true" />
 
     <fragment
         android:id="@+id/event_list"
