--- a/app/src/main/res/layout/fragment_event_upsert.xml
+++ b/app/src/main/res/layout/fragment_event_upsert.xml
@@ -31,12 +31,21 @@
         android:text="@string/create_event"
         style="@style/pageHeader"/>
 
+    <EditText
+        android:id="@+id/upsert_event_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/event_title_hint"
+        android:inputType="text|textCapWords"
+        android:singleLine="true"
+        android:layout_below="@id/upsert_title" />
+
     <TextView
         android:id="@+id/upsert_event_type_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/event_type"
-        android:layout_below="@id/upsert_title" />
+        android:layout_below="@id/upsert_event_title" />
 
     <Spinner
         android:id="@+id/upsert_event_type"
