Validation for Event creation/editing.
Added logic to reduce experience when deleting an event.
Added logic to add experience when creating an event.

Changed both query adapters to order by creation time ascending.

--- a/app/src/main/res/layout/event_twopane.xml
+++ b/app/src/main/res/layout/event_twopane.xml
@@ -39,8 +39,8 @@
 
         <Button
             android:id="@+id/death_button"
+            style="@style/primaryButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:text="Died"
             android:layout_alignParentBottom="true"/>
 
