--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
 
     <dimen name="header_text">24sp</dimen>
     <dimen name="detail_text">16sp</dimen>
+
+    <dimen name="button_height">40dp</dimen>
 </resources>
