Implemented delete all characters and clear database.
Removed the hidden playercharacter id from the character list item view as it wasn't getting the character's objectId value after creation which was causing issues. This is now handled by getting the object for the list item view.

Enabled loading from local for CharacterClass and Race.

Changed logger to be a singleton as getting it via an activity was troublesome and causing crashes.

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -24,6 +24,7 @@
 
         <Button
             android:id="@+id/tutorials"
+            style="@style/primaryButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/standard_padding"
@@ -32,20 +33,21 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:padding="@dimen/standard_padding"
+            android:layout_margin="@dimen/standard_padding"
             android:background="#ffffff"/>
 
         <Button
             android:id="@+id/delete_all_characters_button"
+            style="@style/secondaryButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/standard_padding"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginBottom="@dimen/standard_padding"
             android:text="@string/delete_all_characters"/>
         <Button
             android:id="@+id/delete_all_data_button"
+            style="@style/secondaryButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/standard_padding"
+            android:layout_height="@dimen/button_height"
             android:text="@string/delete_all_data"/>
     </LinearLayout>
 
