Race / Class deletion controls hidden when spinner is empty

--- a/app/src/main/res/layout-land/activity_customize.xml
+++ b/app/src/main/res/layout-land/activity_customize.xml
@@ -39,6 +39,7 @@
             android:layout_height="@dimen/activity_vertical_margin" />
 
         <TextView
+            android:id="@+id/delete_race_label"
             style="@style/detailTextViewLabel"
             android:text="@string/delete_race" />
         <Spinner
@@ -77,6 +78,7 @@
             android:layout_height="@dimen/activity_vertical_margin" />
 
         <TextView
+            android:id="@+id/delete_class_label"
             style="@style/detailTextViewLabel"
             android:text="@string/delete_class" />
         <Spinner
