Race / Class deletion controls hidden when spinner is empty

--- a/app/src/main/res/layout-land/activity_customize.xml
+++ b/app/src/main/res/layout-land/activity_customize.xml
@@ -35,6 +35,7 @@
             android:text="@string/save_new_race" />
 
         <Space
+            android:id="@+id/delete_race_spacer"
             android:layout_width="match_parent"
             android:layout_height="@dimen/activity_vertical_margin" />
 
@@ -74,6 +75,7 @@
             android:text="@string/save_new_class" />
 
         <Space
+            android:id="@+id/delete_class_spacer"
             android:layout_width="match_parent"
             android:layout_height="@dimen/activity_vertical_margin" />
 
