Fixed crash on restore when the upsert fragment was shown.
You can't replace the fragment if you set it in the layout xml using the fragment tag and the class name. You must use a FrameLayout and set the initial fragment in code.

--- a/app/src/main/res/layout/character_twopane.xml
+++ b/app/src/main/res/layout/character_twopane.xml
@@ -53,11 +53,9 @@
             android:layout_below="@id/create_character_button" />
     </RelativeLayout>
 
-    <fragment
+    <FrameLayout
         android:id="@+id/character_detail"
-        android:name="ca.secondlifestory.activities.character.CharacterDetailFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3"
-        tools:layout="@layout/fragment_character_detail" />
+        android:layout_weight="3" />
 </LinearLayout>
