--- a/app/src/main/res/layout-land/fragment_character_detail.xml
+++ b/app/src/main/res/layout-land/fragment_character_detail.xml
@@ -90,7 +90,9 @@
         android:id="@+id/character_description_label"
         style="@style/detailTextViewLabel"
         android:text="@string/description"
-        android:layout_below="@id/total_xp_label"/>
+        android:layout_below="@id/total_xp_label"
+        android:layout_marginRight="@dimen/standard_padding"
+        android:layout_marginEnd="@dimen/standard_padding" />
 
     <RelativeLayout
         android:id="@+id/footer"
@@ -105,19 +107,24 @@
             android:id="@+id/edit_character_button"
             android:text="@string/edit"
             style="@style/primaryButton"
-            android:layout_alignTop="@id/delete_character_button"
-            />
+            android:layout_below="@id/delete_character_button"
+            android:layout_alignParentRight="false"
+            android:layout_alignLeft="@id/delete_character_button"
+            android:layout_alignRight="@id/delete_character_button"
+            android:paddingRight="0dp"
+            android:paddingLeft="0dp"
+            android:layout_marginTop="@dimen/standard_padding"/>
     </RelativeLayout>
 
     <ScrollView
         android:id="@+id/description_scrollview"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@id/character_description_label"
-        android:layout_above="@id/footer"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_below="@id/total_xp_label"
+        android:layout_toRightOf="@id/character_description_label"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:background="@color/background_floating_material_dark">
+        android:background="@color/background_floating_material_dark"
+        android:padding="2sp">
         <TextView
             android:id="@+id/character_description"
             android:layout_height="wrap_content"
