Added landscape layout for character upsert.

--- a/app/src/main/res/layout-land/fragment_event_detail.xml
+++ b/app/src/main/res/layout-land/fragment_event_detail.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- fragment_event_detail.xml
+<!-- land\fragment_event_detail.xml
     Purpose: Landscape Detail fragment layout for EventDetailFragment
 
     Drew Matheson, 2015.11.08: Created
